--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/springdata
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
+spring.jpa.hibernate.ddl-auto= create
+
+
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+
+logging.level.org.hibernate.type.descriptor.sql=trace
